# ml-fastvlm

./: .gitignore  build_hd_datasets.py  check_665k_json.py  check_env.py  construct_hd251k.py  debug  debug_raw_output.py  debug_single_sample.py  download_gqa.sh  entry.sh  entry_low.sh  eval_gqa_accuracy.py  eval_gqa_official.py  eval_textvqa_official.py  fast_extract_gqa.py  fix_model_pad_token.py  flops_fvcore_results_fastvithd_1024x1024_vt256.json  flops_test.py  flops_test_advanced.py  flops_test_final_complete.json  generate_ocr_llava_style.py  generate_ocr_tesseract.py  generate_ocr_test.py  generate_ocr_tokens.py  gpu_occupy.py  install_ocr_deps.sh  llava_fastvithd_0. 5b_stage2_ttft_results.json  merge_datasets.py  parallel_delete.py  parallel_extract_gqa.py  predict.py  pyproject.toml  run_dat_llava1_5_test.sh  run_flops_test.sh  run_gqa_8gpu.sh  run_gqa_evaluation.sh  run_gqa_official.sh  sa1b_links_0803.txt  simple_test.py  test_dat_flex_attention.py  (+22 more)
configs/: llava1_5_v1.yaml  llava1_5_v2.yaml  llava1_5_v2_mrope.yaml  llava1_5_v3.yaml  llava1_5_v4.yaml  llava1_5_v5.yaml  llava1_5_v6.yaml  llava1_5_v7.yaml  llava1_5_v8.yaml  llava1_5_v9.yaml
eval/: gqa.sh
gqa_debug_20/: gqa_results_1_0.jsonl
gqa_debug_20_7b/: gqa_results_1_0.jsonl
llava/: __init__.py  mm_utils.py
scripts/: analyze_resolution_distribution.py  dbg_spatial_attn_guide.py  debug_1node.sh  download_all_data.sh  eval_pixel_sweep.sh  install_flash_attn_local.sh  merge_lora_dat_weights.py  overnight_general_sweep.sh  train_dat_can_v1.sh  train_dat_can_v2.sh  train_dat_can_v3.sh  (+9 more)
(+184 files in other folders)
