[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "VL-DAT codebase based on LLaVA."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch", "torchvision",
    "transformers", "tokenizers", "sentencepiece", "shortuuid",
    "accelerate", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn",
    "gradio", "requests", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts", "timm==1.0.15",
    "coremltools", "deepspeed", "wandb"
]


[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
